--- a/my_form.html
+++ b/my_form.html
@@ -3,6 +3,9 @@
 <html lang="fr">
     <head>
         <meta charset = "utf-8">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet">
         <title>My Form</title>
         <link rel="stylesheet" href="my_form.css">
     </head>
