--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta name="x-apple-disable-message-reformatting">
+  <link href='https://fonts.googleapis.com/css?family=Orbitron:ital,wght@1,700&display=swap:300,400,700' rel='stylesheet' type='text/css'>
+    <link href="style.css" type="text/css" rel="stylesheet">
   <title></title>
   <!--[if mso]>
   <noscript>
