--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             
             <input type="hidden" id="tokken" name="tokken" value="My first web site">
                 <div class=validation>
-                    <input type="submit" value="validation">
+                    <input type="submit" value="Validation" class= "button" class="btn btn-primary btn-lg">
                 </div>
         </form>
     </body>
