--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <head>
         <br>
         <title>My Form</title>
-        <link rel="stylesheet" href="my_form.css">
+        <link rel="stylesheet" href="index.css">
     </head>
     
     <body>
